fix text overflow in profile

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -109,6 +109,7 @@
   .profile__name {
     font-size: 22px;
     padding-right: 10px;
+    max-width: 200px;
   }
   .profile__edit-button {
     margin: 0;
@@ -121,6 +122,7 @@
     font-size: 14px;
     margin-bottom: 36px;
     text-align: center;
+    max-width: 300px;
   }
   .profile__add-button {
     margin: 0;
